个人资料完善

--- a/client/src/common/scss/base.scss
+++ b/client/src/common/scss/base.scss
@@ -5,6 +5,7 @@ $paleGrey: rgb(244, 245, 247);
 $paleGreyTwo: rgb(253, 253, 253);
 $black: rgb(41, 44, 64);
 
+$warmRed: #E2644C;
 $warmgrey: rgb(163, 166, 178);
 
 
