新界面开发

--- a/client/src/common/scss/base.scss
+++ b/client/src/common/scss/base.scss
@@ -1,6 +1,10 @@
 
 @import "./reset";
 
+$mainColor: #6477F2;
+$mainTitleColor: #354052;
+$subTitleColor: #9B9B9B;
+
 $paleGrey: rgb(244, 245, 247);
 $paleGreyTwo: rgb(253, 253, 253);
 $black: rgb(41, 44, 64);
