--- a/client/src/common/scss/base.scss
+++ b/client/src/common/scss/base.scss
@@ -4,6 +4,7 @@
 $mainColor: #6477F2;
 $mainTitleColor: #354052;
 $subTitleColor: #9B9B9B;
+$originOne: #FFA042;
 
 $paleGrey: rgb(244, 245, 247);
 $paleGreyTwo: rgb(253, 253, 253);
