--- a/client/src/common/scss/base.scss
+++ b/client/src/common/scss/base.scss
@@ -32,6 +32,28 @@ body {
   word-break: normal;
 }
 
-.button-clikable{
-  
+// btn样式：圆角、背景色主题色，有阴影
+.button-style-main {
+  padding: 0px;
+  background: $mainColor;
+  border-width: 0px;
+  outline: 0;
+  font-size: 14px;
+  color: white;
+  height: 48px;
+  border-radius: 24px;
+  //box-shadow: 0px 4px 6px rgba(115, 109, 216, 0.4);
+}
+
+// 圆角、有边框，边框样色主题色、高度默认48、背景色白
+.button-style-border {
+  padding: 0px;
+  background: white;
+  border: solid 1px $mainColor;
+  outline: 0;
+  font-size: 12px;
+  color: $mainColor;
+  height: 48px;
+  border-radius: 24px;
+  cursor:pointer;
 }
