--- a/client/src/common/scss/element.scss
+++ b/client/src/common/scss/element.scss
@@ -1,10 +1,7 @@
-$--color-primary: deepskyblue !default;
+$--color-primary: #6477F2 !default;
 
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 @import "~element-ui/packages/theme-chalk/src/index";
 
-.el-table__header-wrapper tr{
-   background-color: deepskyblue !important;
-}
 
