--- a/client/src/common/scss/element.scss
+++ b/client/src/common/scss/element.scss
@@ -2,6 +2,6 @@ $--color-primary: #6477F2 !default;
 
 $--font-path: 'element-ui/lib/theme-chalk/fonts';
 
-@import "element-ui/packages/theme-chalk/src/index";
+@use "element-ui/packages/theme-chalk/src/index" as *;
 
 
