--- a/client/src/common/scss/icon.css
+++ b/client/src/common/scss/icon.css
@@ -11,7 +11,7 @@
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  font-family: 'icomoon', serif !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
